--- a/src/index.css
+++ b/src/index.css
@@ -1,37 +1,58 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-.container{
+.container {
   min-height: 100vh;
   min-width: auto;
   justify-content: center;
   align-items: center;
   display: flex;
-  background: linear-gradient(90deg,  rgb(0, 0, 0)0%,  rgb(120, 190, 255)50%, rgb(0, 0, 0) 100%);
+  background: linear-gradient(
+    90deg,
+    rgb(0, 0, 0) 0%,
+    rgb(29, 72, 112) 50%,
+    rgb(0, 0, 0) 100%
+  );
 }
-.todo-container{
+.todo-container {
   position: relative;
   min-height: 70vh;
   width: 700px;
   display: flex;
   flex-direction: column;
-  background: linear-gradient(90deg,  rgb(0, 0, 0)0%, rgba(0, 0, 0, 0.7) 100%);
+  /* background: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 0.7) 0%,
+    rgba(0, 0, 0, 0.7) 100%
+  ); */
   border-radius: 15px;
   align-items: center;
   padding-bottom: 30px;
   /* backdrop-filter: blur(10px); */
 }
-.title{
-  color: white;
+.suppose-to-be-funny-text-container {
+  padding: 25px 35px;
+  width: 100%;
+  text-align: left;
+}
+.title {
+  color: #e2e2e2;
+  font-size: 32px;
+}
+.subtitle {
+  color: #e2e2e2;
+  font-size: 22px;
   margin-bottom: 15px;
 }
-.todo-item{
+
+.todo-item {
   display: flex;
   justify-content: space-between;
-  color:black;
+  color: black;
   text-transform: uppercase;
   font-size: 1rem;
   font-weight: bold;
@@ -43,39 +64,40 @@
   height: 50px;
   width: 90%;
   border-radius: 4px;
-  background: linear-gradient(90deg,rgba(252,176,69,1)0%,rgba(200,122,40, 1) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(252, 176, 69, 1) 0%,
+    rgba(200, 122, 40, 1) 100%
+  );
   cursor: pointer;
 }
-.todo-item p{
-  flex-shrink: 1;
-}
-.icon-edit{
+
+.icon-edit {
   font-size: 1.5rem;
   color: black;
-  flex-shrink: 1;
 }
-.icon-close{
+.icon-close {
   margin-left: 5px;
   font-size: 1.5rem;
   color: black;
 }
-.create-todo-container{
+.create-todo-container {
   margin: 25px 10px;
   width: 90%;
 }
-.create-todo-input{
+.create-todo-input {
   padding: 14px 32px 14px 16px;
   border-radius: 4px 0 0 4px;
-  border: 2px solid rgba(252,176,69,1);
+  border: 2px solid rgba(252, 176, 69, 1);
   outline: none;
   width: 75%;
   color: #fff;
   background: transparent;
 }
-.create-todo-input::placeholder{
+.create-todo-input::placeholder {
   color: #e2e2e2;
 }
-.create-todo-button{
+.create-todo-button {
   /* font-size: 12px; */
   text-transform: uppercase;
   font-weight: bold;
@@ -86,5 +108,9 @@
   border-radius: 0 4px 4px 0;
   cursor: pointer;
   outline: none;
-  background: linear-gradient(90deg,rgba(252,176,69,1)0%,rgba(200,122,40, 1) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(252, 176, 69, 1) 0%,
+    rgba(200, 122, 40, 1) 100%
+  );
 }
