project ready for testing

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 .container {
+  position: relative;
   min-height: 100vh;
   min-width: auto;
   justify-content: center;
@@ -140,6 +141,24 @@
   padding: 16px;
   border: none;
   border-radius: 0 4px 4px 0;
+  cursor: pointer;
+  outline: none;
+  background: linear-gradient(
+    90deg,
+    rgba(252, 176, 69, 1) 0%,
+    rgba(200, 122, 40, 1) 100%
+  );
+}
+.button-fetched-data {
+  text-transform: uppercase;
+  font-weight: bold;
+  width: auto;
+  color: black;
+  padding: 16px;
+  margin-bottom: 25px;
+  margin-left: 30%;
+  border: none;
+  border-radius: 4px 4px 4px 4px;
   cursor: pointer;
   outline: none;
   background: linear-gradient(
